[package]
name = "fproxy"
version = "0.1.0"
edition = "2021"

[lib]
name = "fproxy" # The name of the target.
bench = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
bytes = "1.4.0"
clap = { version = "4.4.0", features = ["derive", "env"] }
quinn = "0.10.2"
rand = "0.8.5"
rcgen = "0.11.1"
rustls = { version = "0.21.6", features = ["dangerous_configuration"] }
tokio = { version = "1.32.0", features = ["full"] }
tokio-macros = "2.1.0"
tokio-stream = "0.1.14"
tokio-test = "0.4.3"
tokio-util = { version = "0.7.8", features = ["full"] }
webpki-roots = "0.25.2"
tracing = "0.1.37"
tracing-futures = "0.2.5"
tracing-subscriber = "0.3.17"
tokio-rustls = "0.24.1"
rustls-pemfile = "1.0.3"
directories-next = "2.0.0"
hyper = { version = "1.0.0-rc.4", features = ["full"] }
http-body-util = "0.1.0-rc.3"
hyper-util = { git = "https://github.com/hyperium/hyper-util.git" }
http = "0.2.9"
